sliting up zshrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,6 @@ bind t new-window -c "#{pane_current_path}"
 # Realod config
 bind r source-file ~/.tmux.conf \; display "Reloaded config"
 
-# Status bar config
-#set -g status-right '#S /// #T  ///  %F '
 
 # Sensible
 set -g status-interval 5
@@ -35,7 +33,12 @@ set -g default-terminal "xterm-256color"
 # Mouse mode on
 set -g mouse on
 
-#setw -g mode-keys vi
+setw -g mode-keys vi
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
