--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,7 +43,7 @@ set-option -g automatic-rename on
 set-window-option -g pane-base-index 1      # make pane numbering consistent with windows
 
 
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/tpm/plugins"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/tpm-plugins"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
